--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
             <div class="group">
                 <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+                    <img src="./img/perfil.jpg" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
+                <a href="#" class="instagram-login">Continue como <b>leticia.barros</b></a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
+                <p class="not-account">Não é leticia.barros?</p>
                 <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
+                    <span >Alternar contas</span>
                     ou
-                    <span class="link-blue">Inscreva-se</span>
+                    <span >Inscreva-se</span>
                 </p>
             </div>
             <div class="get-the-app">
